--- a/project.html
+++ b/project.html
@@ -19,6 +19,9 @@
 				margin-bottom: 5px;
 				font-size: 16px;
 			}
+			.mod-content h3 .subtitle{
+				color: #999;
+			}
 			.mod-content ul{
 				overflow: hidden;
 			}
@@ -103,6 +106,12 @@
 							<ul>
 								<li>
 									<div class="J_link item">
+										<p class="title"><a href="/relationship/" target="_blank">中国亲戚关系计算器</a></p>
+										<p class="summary">弘扬中国传统文化，有趣的教育工具</p>
+									</div>
+								</li>
+								<li>
+									<div class="J_link item">
 										<p class="title"><a href="/finder/" target="_blank">最短寻址</a></p>
 										<p class="summary">迷宫自动寻址，游戏常用算法</p>
 									</div>
@@ -115,31 +124,64 @@
 								</li>
 								<li>
 									<div class="J_link item">
-										<p class="title"><a href="/relationship/" target="_blank">中国亲戚关系计算器</a></p>
-										<p class="summary">弘扬中国传统文化，有趣的教育工具</p>
-									</div>
-								</li>
-								<li>
-									<div class="J_link item">
 										<p class="title"><a href="/chinese-transverter/" target="_blank">中文简体繁体转换器</a></p>
 										<p class="summary">两岸三地文字转换工具</p>
-									</div>
-								</li>
-								<li>
-									<div class="J_link item">
-										<p class="title"><a href="/calendar/" target="_blank">农历公历转换</a></p>
-										<p class="summary">方便查询农历和公历生日及节假日</p>
 									</div>
 								</li>
 							</ul>
 						</section>
 						<section>
-							<h3>APP</h3>
+							<h3>网页组件 <span class="subtitle">Web Component</span></h3>
 							<ul>
 								<li>
 									<div class="J_link item">
-										<p class="title"><a href="/relationship/vue/" target="_blank">亲戚关系计算器移动版</a></p>
-										<p class="summary">亲戚计算器最佳实践，功能完备</p>
+										<p class="title"><a href="/calendar/" target="_blank">万年历</a></p>
+										<p class="summary">方便查询农历和公历生日及节假日</p>
+									</div>
+								</li>
+								<li>
+									<div class="J_link item">
+										<p class="title"><a href="/widget-code/" target="_blank">代码着色美化</a></p>
+										<p class="summary">让你的代码更性感</p>
+									</div>
+								</li>
+								<li>
+									<div class="J_link item">
+										<p class="title"><a href="/widget-qrcode/" target="_blank">二维码美化组件</a></p>
+										<p class="summary">二维码图片实时根据内容变化</p>
+									</div>
+								</li>
+							</ul>
+						</section>
+						<section>
+							<h3>工具库</h3>
+							<ul>
+								<li>
+									<div class="J_link item">
+										<p class="title">
+											<a href="/datex/" target="_blank">DataX时间格式化</a>
+											<span>/</span>
+											<a href="/datex/timezone.html" target="_blank">世界时间</a>
+										</p>
+										<p class="summary">时间格式快速转换工具</p>
+									</div>
+								</li>
+								<li>
+									<div class="J_link item">
+										<p class="title"><a href="/browser/" target="_blank">浏览器及设备判断</a></p>
+										<p class="summary">识别用户浏览器信息</p>
+									</div>
+								</li>
+								<li>
+									<div class="J_link item">
+										<p class="title"><a href="/idcard/" target="_blank">中国身份证号码解析</a></p>
+										<p class="summary">居民身份证、外国人永久居留身份证号码解析</p>
+									</div>
+								</li>
+								<li>
+									<div class="J_link item">
+										<p class="title"><a href="/anynumber/" target="_blank">大数浮点数计算</a></p>
+										<p class="summary">提供大数浮点数计算及数值格式化工具</p>
 									</div>
 								</li>
 							</ul>
@@ -336,48 +378,6 @@
 							<ul>
 								<li>
 									<div class="J_link item">
-										<p class="title"><a href="/datex/" target="_blank">DataX时间格式化</a></p>
-										<p class="summary">时间格式快速转换工具</p>
-									</div>
-								</li>
-								<li>
-									<div class="J_link item">
-										<p class="title"><a href="/datex/timezone.html" target="_blank">世界时间</a></p>
-										<p class="summary">各大著名城市当地时间</p>
-									</div>
-								</li>
-								<li>
-									<div class="J_link item">
-										<p class="title"><a href="/browser/" target="_blank">浏览器及设备判断</a></p>
-										<p class="summary">识别用户浏览器信息</p>
-									</div>
-								</li>
-								<li>
-									<div class="J_link item">
-										<p class="title"><a href="/widget-code/" target="_blank">代码着色美化</a></p>
-										<p class="summary">让你的代码更性感</p>
-									</div>
-								</li>
-								<li>
-									<div class="J_link item">
-										<p class="title"><a href="/widget-qrcode/" target="_blank">二维码组件</a></p>
-										<p class="summary">二维码图片实时根据内容变化</p>
-									</div>
-								</li>
-								<li>
-									<div class="J_link item">
-										<p class="title"><a href="/idcard/" target="_blank">中国身份证号码解析</a></p>
-										<p class="summary">居民身份证、外国人永久居留身份证号码解析</p>
-									</div>
-								</li>
-								<li>
-									<div class="J_link item">
-										<p class="title"><a href="/anynumber/" target="_blank">大数浮点数计算</a></p>
-										<p class="summary">提供大数浮点数计算及数值格式化工具</p>
-									</div>
-								</li>
-								<li>
-									<div class="J_link item">
 										<p class="title"><a href="/imageCode/" target="_blank">imageCode脚本加密</a></p>
 										<p class="summary">将代码转化成图片加密</p>
 									</div>
@@ -407,7 +407,7 @@
 			</div>
 			<footer>
 				<div class="mod-foot">
-					<p>Copyright &copy; 2016 - 2023 <a href="/">passer-by.com</a></p>
+					<p>Copyright &copy; 2016 - 2024 <a href="/">passer-by.com</a></p>
 				</div>
 			</footer>
 		</div>
