--- a/project.html
+++ b/project.html
@@ -106,7 +106,11 @@
 							<ul>
 								<li>
 									<div class="J_link item">
-										<p class="title"><a href="/relationship/" target="_blank">中国亲戚关系计算器</a></p>
+										<p class="title">
+											<a href="/relationship/" target="_blank">中国亲戚关系计算器</a>
+											<span>/</span>
+											<a href="/relationship/vue/" target="_blank">移动版</a>
+										</p>
 										<p class="summary">弘扬中国传统文化，有趣的教育工具</p>
 									</div>
 								</li>
@@ -193,7 +197,8 @@
 									<div class="J_link item">
 										<p class="title">
 											<a class="hot" href="//jquerywidget.com/jquery-slider/" target="_blank">轮播</a>
-											/<a href="//jquerywidget.com/jquery-slider/subject.html" target="_blank">全屏滚动</a>
+											<span>/</span>
+											<a href="//jquerywidget.com/jquery-slider/subject.html" target="_blank">全屏滚动</a>
 										</p>
 										<p class="summary">幻灯片、全屏轮播、跑马灯等应用</p>
 									</div>
