--- a/project.html
+++ b/project.html
@@ -57,8 +57,9 @@
 				border-bottom: 1px dotted #666;
 			}
 			@media screen and (max-width: 800px){
-				.container{
-					padding: 0 12px;
+				.mod-content li{
+					float: none;
+					width: auto;
 				}
 				.mod-content .item{
 					margin: 0 1px 2px;
@@ -163,7 +164,7 @@
 								<li>
 									<div class="J_link item">
 										<p class="title">
-											<a href="/datex/" target="_blank">DataX时间格式化</a>
+											<a href="/datex/" target="_blank">datex时间格式化</a>
 											<span>/</span>
 											<a href="/datex/timezone.html" target="_blank">世界时间</a>
 										</p>
