--- a/project.html
+++ b/project.html
@@ -10,7 +10,7 @@
 		<link rel="shortcut icon" href="/public/image/favicon.png">
 		<link rel="canonical" href="https://passser-by.com/product.html">
 		<link rel="stylesheet" href="public/style/common.css">
-		<style>
+		<style type="text/css">
 			.mod-content section{
 				margin-bottom: 18px;
 			}
@@ -72,15 +72,6 @@
 				}
 			}
 		</style>
-		<script>
-			(function(){ //IE低版本兼容
-				var e = ['footer','header','section'],
-				          i= e.length;
-				while(i--){
-				      document.createElement(e[i]);
-				}
-			})();
-		</script>
 	</head>
 	<body>
 		<div class="wrapper">
@@ -108,7 +99,7 @@
 								<li>
 									<div class="J_link item">
 										<p class="title">
-											<a href="/relationship/" target="_blank">中国亲戚关系计算器</a>
+											<a class="hot" href="/relationship/" target="_blank">中国亲戚关系计算器</a>
 											<span>/</span>
 											<a href="/relationship/vue/" target="_blank">移动版</a>
 										</p>
@@ -214,7 +205,7 @@
 								<li>
 									<div class="J_link item">
 										<p class="title">
-											<a class="hot" href="//jquerywidget.com/jquery-slider/" target="_blank">轮播</a>
+											<a href="//jquerywidget.com/jquery-slider/" target="_blank">轮播</a>
 											<span>/</span>
 											<a href="//jquerywidget.com/jquery-slider/subject.html" target="_blank">全屏滚动</a>
 										</p>
