--- a/project.html
+++ b/project.html
@@ -180,6 +180,12 @@
 										<p class="summary">提供大数浮点数计算及数值格式化工具</p>
 									</div>
 								</li>
+								<li>
+									<div class="J_link item">
+										<p class="title"><a href="/ajax/" target="_blank">异步请求库</a></p>
+										<p class="summary">简易的原生异步请求库</p>
+									</div>
+								</li>
 							</ul>
 						</section>
 						<section>
