--- a/project.html
+++ b/project.html
@@ -199,6 +199,12 @@
 								</li>
 								<li>
 									<div class="J_link item">
+										<p class="title"><a href="/gobang/" target="_blank">五子棋人机对战</a></p>
+										<p class="summary">玩家和电脑进行五子棋对战游戏</p>
+									</div>
+								</li>
+								<li>
+									<div class="J_link item">
 										<p class="title"><a href="/blackjack/" target="_blank">21点纸牌</a></p>
 										<p class="summary">经典纸牌游戏</p>
 									</div>
