--- a/about.html
+++ b/about.html
@@ -116,6 +116,8 @@
 								<a href="http://qianshu.city/" target="_blank">千树CityHome</a>
 								<a href="http://chuangzaoshi.com/" target="_blank">创造狮导航</a>
 								<a href="https://jquerywidget.com/" target="_blank">jQuery组件</a>
+								<a href="https://brosweris.com/" target="_blank">BrowserIs</a>
+								<a href="https://thedate.today/" target="_blank">TheDateToday</a>
 							</p>
 						</section>
 						<section>
@@ -151,7 +153,7 @@
 			</div>
 			<footer>
 				<div class="mod-foot">
-					<p>Copyright &copy; 2016 - 2024 <a href="/">passer-by.com</a></p>
+					<p>Copyright &copy; 2016 - 2025 <a href="/">passer-by.com</a></p>
 				</div>
 			</footer>
 		</div>
