--- a/project.html
+++ b/project.html
@@ -176,6 +176,12 @@
 								</li>
 								<li>
 									<div class="J_link item">
+										<p class="title"><a href="/livestorage/" target="_blank">响应式数据本地存储</a></p>
+										<p class="summary">监听变量变化，实时同步到本地存储中</p>
+									</div>
+								</li>
+								<li>
+									<div class="J_link item">
 										<p class="title"><a href="/anynumber/" target="_blank">大数浮点数计算</a></p>
 										<p class="summary">提供大数浮点数计算及数值格式化工具</p>
 									</div>
