--- a/project.html
+++ b/project.html
@@ -147,6 +147,12 @@
 										<p class="summary">二维码图片实时根据内容变化</p>
 									</div>
 								</li>
+								<li>
+									<div class="J_link item">
+										<p class="title"><a href="/widget-region/" target="_blank">行政区划选择组件</a></p>
+										<p class="summary">中国省市区三级行政区划选</p>
+									</div>
+								</li>
 							</ul>
 						</section>
 						<section>
