--- a/about.html
+++ b/about.html
@@ -1,162 +1,127 @@
 <!DOCTYPE html>
 <html lang="zh-CN">
-	<head>
-		<meta charset="utf-8">
-		<title>关于 - 路人甲</title>
-		<meta name="viewport" content="width=device-width,initial-scale=1.0,maximum-scale=1.0,user-scalable=0">
-		<meta name="description" content="关于本站">
-		<meta name="keywords" content="联系方式">
-		<meta name="author" content="木木阳,mumuy" />
-		<link rel="shortcut icon" href="public/image/favicon.png">
-		<link rel="canonical" href="http://passser-by.com/about.html">
-		<link rel="stylesheet" href="public/style/common.css">
-		<style>
-			.mod-content{
-				line-height: 20px;
-			}
-			.mod-content blockquote{
-				margin:0 20px 30px;
-				padding:7px 15px;
-				background: #f8f8f8;
-				border-top-right-radius: 21px;
-				border-bottom-left-radius: 21px;
-			}
-			.mod-content .from{
-				text-align: right;
-			}
-			.mod-content section{
-				margin-bottom: 18px;
-			}
-			.mod-content h3{
-				padding-left: 2px;
-				margin-bottom: 5px;
-				font-size: 16px;
-			}
-			.mod-content p.link a{
-				margin:0 4px;
-			}
-			.mod-content p a:hover{
-				border-bottom: 1px dotted #666;
-			}
-			.mod-content p.gray{
-				color: #666;
-			}
-			.mod-content .account{
-				padding-top: 7px;
-				margin-bottom: 20px;
-			}
-			.mod-content .octicon {
-			    display: inline-block;
-			    margin:0 4px;
-			    vertical-align: text-top;
-			    fill: currentColor;
-			    color: #ccc;
-			}
-			.mod-content .octicon:hover {
-			    color: #bbb;
-			}
-		</style>
-		<script>
-			(function(){ //IE低版本兼容
-				var e = ['footer','header','section'],
-				          i= e.length;
-				while(i--){
-				      document.createElement(e[i]);
-				}
-			})();
-		</script>
-	</head>
-	<body>
-		<div class="wrapper">
-			<header>
-				<div class="mod-head">
-					<h1><a href="/">PASSER-BY</a></h1>
-					<p>一只程序猿的禅意生活</p>
-				</div>
-				<div class="mod-list">
-					<ul>
-						<li><a href="/project.html">项目</a></li>
-						<li><a href="/writing.html">文字</a></li>
-						<li><a href="/photograph.html">摄影</a></li>
-						<li><a href="/comment.html">留言</a></li>
-						<li class="active"><a href="/about.html">关于</a></li>
-					</ul>
-				</div>
-			</header>
-			<div class="container">
-				<div class="main">
-					<div class="mod-content">
-						<blockquote>
-							<p>I sit at my window this morning where the world like a passer-by stops for a moment, nods to me and goes.</p>
-							<p>我今晨坐在窗前，世界如一个路人似的，停留了一会，向我点点头又走过去了。</p>
-							<p class="from">--泰戈尔《飞鸟集》</p>
-						</blockquote>
-						<section>
-							<h3>关于我</h3>
-							<p>标准的90后，喜欢特立独行，向往简约而不简单的生活。大学期间开始利用课余时间“间歇性”学习前端开发，自此走上程序猿的不归路……这就是我，一个路人甲~</p>
-						</section>
-						<section>
-							<h3>联系方式</h3>
-							<p>邮箱：<a href="mailto:zhenghaole@gmail.com">zhenghaole@gmail.com</a></p>
-							<p class="link">QQ群：<a target="_blank" href="http://shang.qq.com/wpa/qunwpa?idkey=7c4c05ef6051dc4d39a30367ac40bf6993b68ae164cd52286fb5451ffe847d62">前端组件开发</a>
-							<a target="_blank" href="//shang.qq.com/wpa/qunwpa?idkey=64aada1ef7a4881d659d77d1edf16bf2e79141a22b2a996cf2a04e96b26c4d18">厦门多肉联萌</a>
-							<p>
-							<div class="account">
-								<a href="https://github.com/mumuy/" target="_blank" title="Github">
-      								<svg aria-hidden="true" class="octicon" height="24" title="GitHub " version="1.1" viewBox="0 0 16 16" width="24"><path d="M8 0C3.58 0 0 3.58 0 8c0 3.54 2.29 6.53 5.47 7.59 0.4 0.07 0.55-0.17 0.55-0.38 0-0.19-0.01-0.82-0.01-1.49-2.01 0.37-2.53-0.49-2.69-0.94-0.09-0.23-0.48-0.94-0.82-1.13-0.28-0.15-0.68-0.52-0.01-0.53 0.63-0.01 1.08 0.58 1.23 0.82 0.72 1.21 1.87 0.87 2.33 0.66 0.07-0.52 0.28-0.87 0.51-1.07-1.78-0.2-3.64-0.89-3.64-3.95 0-0.87 0.31-1.59 0.82-2.15-0.08-0.2-0.36-1.02 0.08-2.12 0 0 0.67-0.21 2.2 0.82 0.64-0.18 1.32-0.27 2-0.27 0.68 0 1.36 0.09 2 0.27 1.53-1.04 2.2-0.82 2.2-0.82 0.44 1.1 0.16 1.92 0.08 2.12 0.51 0.56 0.82 1.27 0.82 2.15 0 3.07-1.87 3.75-3.65 3.95 0.29 0.25 0.54 0.73 0.54 1.48 0 1.07-0.01 1.93-0.01 2.2 0 0.21 0.15 0.46 0.55 0.38C13.71 14.53 16 11.53 16 8 16 3.58 12.42 0 8 0z"></path></svg>
-  								</a>
-  								<a href="https://weibo.com/loveto2012/" target="_blank" title="weibo">
-		  							<svg aria-hidden="true" class="octicon" width="37" height="24" viewBox="0 0 37 30"><path d="M36.539,12.806 C36.539,12.808 36.539,12.810 36.539,12.812 C36.297,13.556 35.498,13.964 34.754,13.723 C34.008,13.482 33.600,12.683 33.841,11.937 L33.840,11.937 C34.580,9.646 34.111,7.033 32.384,5.117 C30.656,3.201 28.108,2.470 25.753,2.970 C24.987,3.133 24.234,2.644 24.071,1.878 C23.907,1.114 24.395,0.360 25.161,0.195 L25.162,0.195 C28.472,-0.509 32.058,0.519 34.489,3.217 C36.921,5.911 37.577,9.584 36.539,12.806 ZM26.721,7.506 L26.721,7.505 C26.064,7.648 25.415,7.226 25.274,6.568 C25.133,5.908 25.553,5.259 26.212,5.119 C27.825,4.775 29.572,5.274 30.756,6.588 C31.941,7.901 32.259,9.690 31.752,11.260 C31.545,11.902 30.857,12.252 30.216,12.047 C29.574,11.839 29.224,11.150 29.431,10.509 L29.429,10.509 C29.678,9.741 29.522,8.866 28.943,8.224 C28.365,7.583 27.510,7.340 26.721,7.506 ZM27.210,9.790 C27.851,10.706 27.789,11.990 27.198,13.478 C26.925,14.163 27.283,14.269 27.804,14.426 C29.927,15.084 32.291,16.678 32.291,19.485 C32.291,24.132 25.594,29.985 15.526,29.985 C7.847,29.985 -0.003,26.261 -0.003,20.135 C-0.003,16.933 2.025,13.230 5.516,9.736 C10.179,5.072 15.616,2.947 17.661,4.994 C18.563,5.896 18.650,7.458 18.070,9.323 C17.768,10.262 18.951,9.742 18.951,9.744 C22.720,8.165 26.008,8.072 27.210,9.790 ZM25.923,19.401 C25.526,15.377 20.236,12.605 14.107,13.211 C7.980,13.818 3.333,17.572 3.731,21.597 C4.129,25.623 9.419,28.394 15.547,27.789 C21.676,27.183 26.320,23.428 25.923,19.401 ZM11.584,26.060 C8.638,25.108 7.391,22.198 8.681,19.576 C9.948,17.005 13.243,15.551 16.159,16.310 C19.177,17.090 20.717,19.939 19.484,22.705 C18.233,25.536 14.636,27.045 11.584,26.060 ZM13.248,20.549 C12.299,20.151 11.073,20.560 10.487,21.479 C9.894,22.402 10.173,23.501 11.115,23.930 C12.071,24.367 13.340,23.952 13.933,23.006 C14.515,22.050 14.208,20.958 13.248,20.549 ZM15.587,19.579 C15.223,19.434 14.768,19.609 14.554,19.968 C14.347,20.328 14.461,20.738 14.826,20.888 C15.197,21.041 15.671,20.865 15.885,20.498 C16.090,20.129 15.957,19.714 15.587,19.579 Z"/></svg>
-		  						</a>
-  							</div>
-						</section>
-						<section>
-							<h3>友情链接</h3>
-							<p class="link">
-								<a href="http://qianshu.city/" target="_blank">千树CityHome</a>
-								<a href="http://chuangzaoshi.com/" target="_blank">创造狮导航</a>
-								<a href="https://jquerywidget.com/" target="_blank">jQuery组件</a>
-								<a href="https://brosweris.com/" target="_blank">BrowserIs</a>
-								<a href="https://thedate.today/" target="_blank">TheDateToday</a>
-							</p>
-						</section>
-						<section>
-							<h3>域名出售</h3>
-							<p class="gray">[武汉] Wuhan.city</p>
-							<p class="gray">[长春] Changchun.city</p>
-							<p class="gray">[南宁] Nanning.city</p>
-							<p class="gray">[南昌] Nanchang.city</p>
-							<p class="gray">[哈尔滨] Harbin.city</p>
-							<p class="gray">[厦门] Xiamen.city</p>
-							<p class="gray">[三亚] Sanya.city</p>
-							<p class="gray">[丽江] Lijiang.city</p>
-							<p class="gray">[大理] Dali.city</p>
-							<p class="gray">[泉州] Quanzhou.city</p>
-							<p class="gray">[北海] Beihai.city</p>
-							<p class="gray">[珠海] Zhuhai.city</p>
-							<p class="gray">[汕头] Shantou.city</p>
-							<p class="gray">[威海] Weihai.city</p>
-							<p class="gray">[宁波] Ningbo.city</p>
-							<p class="gray">[东莞] Dongguan.city</p>
-							<p class="gray">[嘉兴] Jiaxing.city</p>
-							<p class="gray">[龙岩] Longyan.city</p>
-							<p class="gray">[延安] Yanan.city</p>
-							<p class="gray">[承德] Chengde.city</p>
-							<p class="gray">[芜湖] Wuhu.city</p>
-							<p class="gray">[运城] Yuncheng.city</p>
-							<p class="gray">[剑桥] Cambridge.city</p>
-							<p class="gray">[纽卡斯尔] Newcastle.city</p>
-							<p class="gray">[阳光城市] Sunshine.city</p>
-						</section>
-					</div>
-				</div>
-			</div>
-			<footer>
-				<div class="mod-foot">
-					<p>Copyright &copy; 2016 - 2025 <a href="/">passer-by.com</a></p>
-				</div>
-			</footer>
-		</div>
-		<script type="text/javascript" src="https://passer-by.com/public/script/stat.js"></script>
-	</body>
+    <head>
+        <meta charset="utf-8">
+        <meta name="viewport" content="width=device-width,initial-scale=1.0,maximum-scale=1.0,user-scalable=0">
+        <meta name="description" content="关于本站">
+        <meta name="keywords" content="联系方式">
+        <meta name="author" content="木木阳,mumuy" />
+        <title>关于 - 路人甲</title>
+        <link rel="shortcut icon" href="favicon.ico"/>
+        <link rel="canonical" href="http://passser-by.com/about.html">
+        <link rel="stylesheet" href="./static/style/common.css">
+        <link rel="stylesheet" href="./static/style/about.css">
+    </head>
+    <body>
+        <div class="wrapper">
+            <header>
+                <div class="mod-head">
+                    <div class="inner">
+                        <div class="bd">
+                            <div class="logo">
+                                <a href="/"><img src="./static/image/public/logo.png" width="240" height="80" alt="过路人"/></a>
+                            </div>
+                            <nav>
+                                <li><a href="/project.html">项目</a></li>
+                                <li><a href="/writing.html">文字</a></li>
+                                <li><a href="/photograph.html">摄影</a></li>
+                                <li><a href="/comment.html">留言</a></li>
+                                <li class="active"><a href="/about.html">关于我</a></li>
+                            </nav>
+                            <div class="operation">
+                                <a class="btn" href="https://github.com/mumuy/" rel="nofollow" target="_blank" title="Github">
+                                    <svg aria-hidden="true" class="octicon" title="GitHub " version="1.1" viewBox="0 0 16 16" width="24" height="24"><path d="M8 0C3.58 0 0 3.58 0 8c0 3.54 2.29 6.53 5.47 7.59 0.4 0.07 0.55-0.17 0.55-0.38 0-0.19-0.01-0.82-0.01-1.49-2.01 0.37-2.53-0.49-2.69-0.94-0.09-0.23-0.48-0.94-0.82-1.13-0.28-0.15-0.68-0.52-0.01-0.53 0.63-0.01 1.08 0.58 1.23 0.82 0.72 1.21 1.87 0.87 2.33 0.66 0.07-0.52 0.28-0.87 0.51-1.07-1.78-0.2-3.64-0.89-3.64-3.95 0-0.87 0.31-1.59 0.82-2.15-0.08-0.2-0.36-1.02 0.08-2.12 0 0 0.67-0.21 2.2 0.82 0.64-0.18 1.32-0.27 2-0.27 0.68 0 1.36 0.09 2 0.27 1.53-1.04 2.2-0.82 2.2-0.82 0.44 1.1 0.16 1.92 0.08 2.12 0.51 0.56 0.82 1.27 0.82 2.15 0 3.07-1.87 3.75-3.65 3.95 0.29 0.25 0.54 0.73 0.54 1.48 0 1.07-0.01 1.93-0.01 2.2 0 0.21 0.15 0.46 0.55 0.38C13.71 14.53 16 11.53 16 8 16 3.58 12.42 0 8 0z"></path></svg>
+                                    <span>Github</span>
+                                </a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="mod-bg">
+                    <svg class="waves" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" viewBox="0 24 150 28" preserveAspectRatio="none" shape-rendering="auto">
+                        <defs>
+                            <path id="gentle-wave" d="M-160 44c30 0 58-18 88-18s 58 18 88 18 58-18 88-18 58 18 88 18 v44h-352z"></path>
+                        </defs>
+                        <g class="parallax">
+                            <use xlink:href="#gentle-wave" x="48" y="0" fill="rgba(255,255,255,0.4)"></use>
+                            <use xlink:href="#gentle-wave" x="48" y="3" fill="rgba(255,255,255,0.6)"></use>
+                            <use xlink:href="#gentle-wave" x="48" y="5" fill="rgba(255,255,255,0.2)"></use>
+                            <use xlink:href="#gentle-wave" x="48" y="7" fill="rgba(255,255,255,1)"></use>
+                        </g>
+                    </svg>
+                </div>
+            </header>
+            <div class="container">
+                <div class="inner">
+                    <div class="mod-word">
+                        <div class="bd">
+                            <blockquote>
+                                <p>I sit at my window this morning where the world like a passer-by stops for a moment, nods to me and goes.</p>
+                                <p>我今晨坐在窗前，世界如一个路人似的，停留了一会，向我点点头又走过去了。</p>
+                                <p class="from">--泰戈尔《飞鸟集》</p>
+                            </blockquote>
+                        </div>
+                    </div>
+                    <section class="mod-panel">
+                        <div class="hd">
+                            <h3 class="title">关于我</h3>
+                        </div>
+                        <div class="bd">
+                            <p>标准的90后，喜欢特立独行，向往简约而不简单的生活。大学期间开始利用课余时间“间歇性”学习前端开发，自此走上程序猿的不归路……这就是我，一个路人甲~</p>
+                        </div>
+                    </section>
+                    <section class="mod-panel">
+                        <div class="hd">
+                            <h3 class="title">联系方式</h3>
+                        </div>
+                        <div class="bd">
+                            <div class="field-wrapper">
+                                <div class="field-title">邮箱：</div>
+                                <div class="field-content"><a href="mailto:zhenghaole@gmail.com">zhenghaole@gmail.com</a></div>
+                            </div>
+                            <div class="field-wrapper">
+                                <div class="field-title">QQ群：</div>
+                                <div class="field-content"><a target="_blank" href="http://shang.qq.com/wpa/qunwpa?idkey=7c4c05ef6051dc4d39a30367ac40bf6993b68ae164cd52286fb5451ffe847d62">前端组件开发</a></div>
+                            </div>
+                            <div class="field-wrapper">
+                                <div class="field-title">社交账号：</div>
+                                <div class="field-content">
+                                    <a href="https://github.com/mumuy/" target="_blank" title="Github">
+                                        <svg aria-hidden="true" class="octicon" height="24" title="GitHub " version="1.1" viewBox="0 0 16 16" width="24"><path d="M8 0C3.58 0 0 3.58 0 8c0 3.54 2.29 6.53 5.47 7.59 0.4 0.07 0.55-0.17 0.55-0.38 0-0.19-0.01-0.82-0.01-1.49-2.01 0.37-2.53-0.49-2.69-0.94-0.09-0.23-0.48-0.94-0.82-1.13-0.28-0.15-0.68-0.52-0.01-0.53 0.63-0.01 1.08 0.58 1.23 0.82 0.72 1.21 1.87 0.87 2.33 0.66 0.07-0.52 0.28-0.87 0.51-1.07-1.78-0.2-3.64-0.89-3.64-3.95 0-0.87 0.31-1.59 0.82-2.15-0.08-0.2-0.36-1.02 0.08-2.12 0 0 0.67-0.21 2.2 0.82 0.64-0.18 1.32-0.27 2-0.27 0.68 0 1.36 0.09 2 0.27 1.53-1.04 2.2-0.82 2.2-0.82 0.44 1.1 0.16 1.92 0.08 2.12 0.51 0.56 0.82 1.27 0.82 2.15 0 3.07-1.87 3.75-3.65 3.95 0.29 0.25 0.54 0.73 0.54 1.48 0 1.07-0.01 1.93-0.01 2.2 0 0.21 0.15 0.46 0.55 0.38C13.71 14.53 16 11.53 16 8 16 3.58 12.42 0 8 0z"></path></svg>
+                                    </a>
+                                    <a href="https://weibo.com/loveto2012/" target="_blank" title="weibo">
+                                        <svg aria-hidden="true" class="octicon" width="37" height="24" viewBox="0 0 37 30"><path d="M36.539,12.806 C36.539,12.808 36.539,12.810 36.539,12.812 C36.297,13.556 35.498,13.964 34.754,13.723 C34.008,13.482 33.600,12.683 33.841,11.937 L33.840,11.937 C34.580,9.646 34.111,7.033 32.384,5.117 C30.656,3.201 28.108,2.470 25.753,2.970 C24.987,3.133 24.234,2.644 24.071,1.878 C23.907,1.114 24.395,0.360 25.161,0.195 L25.162,0.195 C28.472,-0.509 32.058,0.519 34.489,3.217 C36.921,5.911 37.577,9.584 36.539,12.806 ZM26.721,7.506 L26.721,7.505 C26.064,7.648 25.415,7.226 25.274,6.568 C25.133,5.908 25.553,5.259 26.212,5.119 C27.825,4.775 29.572,5.274 30.756,6.588 C31.941,7.901 32.259,9.690 31.752,11.260 C31.545,11.902 30.857,12.252 30.216,12.047 C29.574,11.839 29.224,11.150 29.431,10.509 L29.429,10.509 C29.678,9.741 29.522,8.866 28.943,8.224 C28.365,7.583 27.510,7.340 26.721,7.506 ZM27.210,9.790 C27.851,10.706 27.789,11.990 27.198,13.478 C26.925,14.163 27.283,14.269 27.804,14.426 C29.927,15.084 32.291,16.678 32.291,19.485 C32.291,24.132 25.594,29.985 15.526,29.985 C7.847,29.985 -0.003,26.261 -0.003,20.135 C-0.003,16.933 2.025,13.230 5.516,9.736 C10.179,5.072 15.616,2.947 17.661,4.994 C18.563,5.896 18.650,7.458 18.070,9.323 C17.768,10.262 18.951,9.742 18.951,9.744 C22.720,8.165 26.008,8.072 27.210,9.790 ZM25.923,19.401 C25.526,15.377 20.236,12.605 14.107,13.211 C7.980,13.818 3.333,17.572 3.731,21.597 C4.129,25.623 9.419,28.394 15.547,27.789 C21.676,27.183 26.320,23.428 25.923,19.401 ZM11.584,26.060 C8.638,25.108 7.391,22.198 8.681,19.576 C9.948,17.005 13.243,15.551 16.159,16.310 C19.177,17.090 20.717,19.939 19.484,22.705 C18.233,25.536 14.636,27.045 11.584,26.060 ZM13.248,20.549 C12.299,20.151 11.073,20.560 10.487,21.479 C9.894,22.402 10.173,23.501 11.115,23.930 C12.071,24.367 13.340,23.952 13.933,23.006 C14.515,22.050 14.208,20.958 13.248,20.549 ZM15.587,19.579 C15.223,19.434 14.768,19.609 14.554,19.968 C14.347,20.328 14.461,20.738 14.826,20.888 C15.197,21.041 15.671,20.865 15.885,20.498 C16.090,20.129 15.957,19.714 15.587,19.579 Z"/></svg>
+                                    </a>
+                                </div>
+                            </div>
+                        </div>
+                    </section>
+                </div>
+            </div>
+            <footer>
+                <div class="mod-fixedbar">
+                    <div class="bd">
+                        <ul>
+                            <li>
+                                <a class="gotop" href="javascript:;" rel="nofollow">
+                                    <img src="./static/image/public/icon-gotop.png" width="24" height="24" alt="回到顶部">
+                                </a>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+                <div class="mod-foot">
+                    <div class="bd">
+                        <p>
+                            <span>Copyright &copy; 2025</span>
+                            <a href="/">路人甲</a>
+                            <span>版权所有</span>
+                        </p>
+                    </div>
+                </div>
+            </footer>
+        </div>
+        <script type="text/javascript" src="./static/script/common.js"></script>
+        <script type="text/javascript" src="./static/script/stat.js"></script>
+    </body>
 </html>
