--- a/comment.html
+++ b/comment.html
@@ -1,152 +1,120 @@
 <!DOCTYPE html>
 <html lang="zh-CN">
-	<head>
-		<meta charset="utf-8">
-		<title>留言 - 路人甲</title>
-		<meta name="viewport" content="width=device-width,initial-scale=1.0,maximum-scale=1.0,user-scalable=0">
-		<meta name="description" content="网站留言">
-		<meta name="keywords" content="留言">
-		<meta name="author" content="木木阳,mumuy" />
-		<link rel="shortcut icon" href="public/image/favicon.png">
-		<link rel="canonical" href="http://passser-by.com/comment.html">
-		<link rel="stylesheet" href="public/style/common.css">
-		<style>
-			.mod-comment{
-				width: 100%;
-				max-width: 960px;
-				line-height: 22px;
-			}
-			.mod-comment .hd{
-				margin: 7px 0 20px;
-			    border: 1px solid #fbeed5;
-			    padding: 10px 20px;
-			    color: #c09853;
-			    background-color: #fcf8e3;
-			    line-height: 22px;
-			    border-radius: 3px;
-			}
-			.mod-comment .btn{
-				display: inline-block;
-    			padding: 4px 12px;
-    			background-color: #28a745;
-    			color: #fff;
-    			border: 1px solid rgba(27,31,35,0.2);
-    			border-radius: 3px;
-			}
-			.mod-comment .btn:hover{
-				background-color: #269f42;
-			}
-			.mod-comment li{
-				margin-bottom: 12px;
-			}
-			.mod-comment .avatar{
-				float: left;
-			}
-			.mod-comment .content{
-				margin-left: 64px;
-				border: 1px solid #d1d5da;
-				border-radius: 3px;
-			}
-			.mod-comment .c-hd{
-				height: 40px;
-				padding: 0 20px;
-			    background-color: #f6f8fa;
-			    border-bottom: 1px solid #d1d5da;
-			    line-height: 40px;
-			    color: #586069;
-			    overflow: hidden;
-			}
-			.mod-comment .c-hd .name{
-				font-weight: bold;
-				color: #586069;
-			}
-			.mod-comment .c-hd .reply{
-				float: right;
-			}
-			.mod-comment .time{
-				white-space: nowrap;
-			}
-			.mod-comment .c-bd{
-				padding: 15px;
-			}
-			.mod-comment .c-bd img{
-				display: block;
-				margin: 0 auto;
-			}
-		</style>
-		<script>
-			(function(){ //IE低版本兼容
-				var e = ['footer','header','section'],
-				          i= e.length;
-				while(i--){
-				      document.createElement(e[i]);
-				}
-			})();
-		</script>
-	</head>
-	<body>
-		<div class="wrapper">
-			<header>
-				<div class="mod-head">
-					<h1><a href="/">PASSER-BY</a></h1>
-					<p>一只程序猿的禅意生活</p>
-				</div>
-				<div class="mod-list">
-					<ul>
-						<li><a href="/project.html">项目</a></li>
-						<li><a href="/writing.html">文字</a></li>
-						<li><a href="/photograph.html">摄影</a></li>
-						<li class="active"><a href="/comment.html">留言</a></li>
-						<li><a href="/about.html">关于</a></li>
-					</ul>
-				</div>
-			</header>
-			<div class="container">
-				<div class="main">
-					<div class="mod-comment">
-						<div class="hd">
-							<p>在Github上与我留言：</p>
-							<p>
-								<a class="btn" href="https://github.com/mumuy/mumuy.github.io/issues/new" target="_blank">发起留言</a>
-							</p>
-						</div>
-						<div class="bd">
-							<ul id="comment">
-								<li><div class="c-bd"><img src="public/image/loading.gif" width="32" height="32"/></div></li>
-							</ul>
-						</div>
-					</div>
-				</div>
-			</div>
-			<footer>
-				<div class="mod-foot">
-					<p>Copyright &copy; 2016 - 2025 <a href="/">passer-by.com</a></p>
-				</div>
-			</footer>
-		</div>
-		<script>
-			fetch('https://api.github.com/repos/mumuy/mumuy.github.io/issues').then((response) => response.json()).then(data => {
-				if(data.length){
-					var comments = [];
-					for(var i=0;i<data.length;i++){
-						var item = data[i];
-						comments.push('<li>\
-								<div class="avatar">\
-									<a href="'+item.user.html_url+'" target="_blank"><img src="'+item.user.avatar_url+'" width="44" height="44"/></a>\
-								</div>\
-								<div class="content">\
-									<div class="c-hd">\
-										<a class="reply" href="'+item.html_url+'" target="_blank">查看详情</a>\
-										<a class="name" href="'+item.user.html_url+'">'+item.user.login+'</a>\
-										<span class="time">'+(new Date(item.updated_at).toLocaleString())+'</span></div>\
-									<div class="c-bd"><h3>'+(item.title.length<20?item.title:'')+'</h3><p>'+item.body+'</p></div>\
-								</div>\
-						</li>');
-					}
-					document.getElementById('comment').innerHTML = comments.join('');
-				}
-		  	});
-		</script>
-		<script type="text/javascript" src="https://passer-by.com/public/script/stat.js"></script>
-	</body>
+    <head>
+        <meta charset="utf-8">
+        <meta name="viewport" content="width=device-width,initial-scale=1.0,maximum-scale=1.0,user-scalable=0">
+        <meta name="description" content="网站留言">
+        <meta name="keywords" content="留言">
+        <meta name="author" content="木木阳,mumuy"/>
+        <title>留言 - 路人甲</title>
+        <link rel="shortcut icon" href="favicon.ico"/>
+        <link rel="canonical" href="http://passser-by.com/comment.html">
+        <link rel="stylesheet" href="./static/style/common.css">
+        <link rel="stylesheet" href="./static/style/comment.css">
+    </head>
+    <body>
+        <div class="wrapper">
+            <header>
+                <div class="mod-head">
+                    <div class="inner">
+                        <div class="bd">
+                            <div class="logo">
+                                <a href="/"><img src="./static/image/public/logo.png" width="240" height="80" alt="过路人"/></a>
+                            </div>
+                            <nav>
+                                <li><a href="/project.html">项目</a></li>
+                                <li><a href="/writing.html">文字</a></li>
+                                <li><a href="/photograph.html">摄影</a></li>
+                                <li class="active"><a href="/comment.html">留言</a></li>
+                                <li><a href="/about.html">关于我</a></li>
+                            </nav>
+                            <div class="operation">
+                                <a class="btn" href="https://github.com/mumuy/" rel="nofollow" target="_blank" title="Github">
+                                    <svg aria-hidden="true" class="octicon" title="GitHub " version="1.1" viewBox="0 0 16 16" width="24" height="24"><path d="M8 0C3.58 0 0 3.58 0 8c0 3.54 2.29 6.53 5.47 7.59 0.4 0.07 0.55-0.17 0.55-0.38 0-0.19-0.01-0.82-0.01-1.49-2.01 0.37-2.53-0.49-2.69-0.94-0.09-0.23-0.48-0.94-0.82-1.13-0.28-0.15-0.68-0.52-0.01-0.53 0.63-0.01 1.08 0.58 1.23 0.82 0.72 1.21 1.87 0.87 2.33 0.66 0.07-0.52 0.28-0.87 0.51-1.07-1.78-0.2-3.64-0.89-3.64-3.95 0-0.87 0.31-1.59 0.82-2.15-0.08-0.2-0.36-1.02 0.08-2.12 0 0 0.67-0.21 2.2 0.82 0.64-0.18 1.32-0.27 2-0.27 0.68 0 1.36 0.09 2 0.27 1.53-1.04 2.2-0.82 2.2-0.82 0.44 1.1 0.16 1.92 0.08 2.12 0.51 0.56 0.82 1.27 0.82 2.15 0 3.07-1.87 3.75-3.65 3.95 0.29 0.25 0.54 0.73 0.54 1.48 0 1.07-0.01 1.93-0.01 2.2 0 0.21 0.15 0.46 0.55 0.38C13.71 14.53 16 11.53 16 8 16 3.58 12.42 0 8 0z"></path></svg>
+                                    <span>Github</span>
+                                </a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="mod-bg">
+                    <svg class="waves" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" viewBox="0 24 150 28" preserveAspectRatio="none" shape-rendering="auto">
+                        <defs>
+                            <path id="gentle-wave" d="M-160 44c30 0 58-18 88-18s 58 18 88 18 58-18 88-18 58 18 88 18 v44h-352z"></path>
+                        </defs>
+                        <g class="parallax">
+                            <use xlink:href="#gentle-wave" x="48" y="0" fill="rgba(255,255,255,0.4)"></use>
+                            <use xlink:href="#gentle-wave" x="48" y="3" fill="rgba(255,255,255,0.6)"></use>
+                            <use xlink:href="#gentle-wave" x="48" y="5" fill="rgba(255,255,255,0.2)"></use>
+                            <use xlink:href="#gentle-wave" x="48" y="7" fill="rgba(255,255,255,1)"></use>
+                        </g>
+                    </svg>
+                </div>
+            </header>
+            <div class="container">
+                <div class="inner">
+                    <div class="mod-comment">
+                        <div class="hd">
+                            <span class="title">在<strong>Github</strong>上与我留言：</span>
+                            <a class="btn" href="https://github.com/mumuy/mumuy.github.io/issues/new" target="_blank">发起留言</a>
+                        </div>
+                        <div class="bd">
+                            <ul id="comment">
+                                <li><div class="c-bd"><img src="./static/image/public/loading.gif" width="32" height="32"/></div></li>
+                            </ul>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <footer>
+                <div class="mod-fixedbar">
+                    <div class="bd">
+                        <ul>
+                            <li>
+                                <a class="gotop" href="javascript:;" rel="nofollow">
+                                    <img src="./static/image/public/icon-gotop.png" width="24" height="24" alt="回到顶部">
+                                </a>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+                <div class="mod-foot">
+                    <div class="bd">
+                        <p>
+                            <span>Copyright &copy; 2025</span>
+                            <a href="/">路人甲</a>
+                            <span>版权所有</span>
+                        </p>
+                    </div>
+                </div>
+            </footer>
+        </div>
+        <script type="text/javascript">
+            fetch('https://api.github.com/repos/mumuy/mumuy.github.io/issues').then((response) => response.json()).then(data => {
+                if(data.length){
+                    var comments = [];
+                    for(var i=0;i<data.length;i++){
+                        var item = data[i];
+                        comments.push(`<li>
+                            <div class="avatar">
+                                <a href="${item.user.html_url}" target="_blank">
+                                    <img src="${item.user.avatar_url}" width="72" height="72"/>
+                                </a>
+                            </div>
+                            <div class="content">
+                                <div class="c-hd">
+                                    <a class="reply" href="${item.html_url}" target="_blank">详情</a>
+                                    <a class="name" href="${item.user.html_url}">${item.user.login}</a>
+                                    <span class="time">${new Date(item.updated_at).toLocaleString()}</span></div>
+                                <div class="c-bd"><h3>${item.title.length<20?item.title:''}</h3><p>${item.body}</p></div>
+                            </div>
+                        </li>`);
+                    }
+                    document.getElementById('comment').innerHTML = comments.join('');
+                }
+              });
+        </script>
+        <script type="text/javascript" src="./static/script/common.js"></script>
+        <script type="text/javascript" src="./static/script/stat.js"></script>
+    </body>
 </html>
