--- a/photograph.html
+++ b/photograph.html
@@ -1,87 +1,116 @@
 <!DOCTYPE html>
 <html lang="zh-CN">
-	<head>
-		<meta charset="utf-8">
-		<title>摄影 - 路人甲</title>
-		<meta name="viewport" content="width=device-width,initial-scale=1.0,maximum-scale=1.0,user-scalable=0">
-		<meta name="description" content="个人摄影作品">
-		<meta name="keywords" content="摄影,照片,爱好">
-		<meta name="author" content="木木阳,mumuy" />
-		<link rel="shortcut icon" href="/public/image/favicon.png">
-		<link rel="canonical" href="http://passser-by.com/photograph.html">
-		<link rel="stylesheet" href="public/style/common.css">
-		<style>
-			.mod-content{
-				padding-top: 90px;
-			}
-			.mod-content section{
-				margin-bottom: 18px;
-				text-align: center;
-			}
-			.mod-content img{
-				width: 100%;
-				max-width: 540px;
-			}
-			.mod-content p{
-				line-height: 32px;
-				color: #666;
-			}
-			.mod-content span{
-				margin:0 5px;
-			}
-
-			@media screen and (max-width: 800px)  {
-				.container{
-					padding: 0 15px;
-				}
-				.mod-content{
-					padding-top: 0;
-				}
-			}
-		</style>
-		<script>
-			(function(){ //IE低版本兼容
-				var e = ['footer','header','section'],
-				          i= e.length;
-				while(i--){
-				      document.createElement(e[i]);
-				}
-			})();
-		</script>
-	</head>
-	<body>
-		<div class="wrapper">
-			<header>
-				<div class="mod-head">
-					<h1><a href="/">PASSER-BY</a></h1>
-					<p>一只程序猿的禅意生活</p>
-				</div>
-				<div class="mod-list">
-					<ul>
-						<li><a href="/project.html">项目</a></li>
-						<li><a href="/writing.html">文字</a></li>
-						<li class="active"><a href="/photograph.html">摄影</a></li>
-						<li><a href="/comment.html">留言</a></li>
-						<li><a href="/about.html">关于</a></li>
-					</ul>
-				</div>
-			</header>
-			<div class="container">
-				<div class="main">
-					<div class="mod-content">
-						<section>
-							<div><img src="public/image/photos/20150828.jpg" width="540"></div>
-							<p><span>2015-08-28</span><span>台北</span></p>
-						</section>
-					</div>
-				</div>
-			</div>
-			<footer>
-				<div class="mod-foot">
-					<p>Copyright &copy; 2016 - 2025 <a href="/">passer-by.com</a></p>
-				</div>
-			</footer>
-		</div>
-		<script type="text/javascript" src="https://passer-by.com/public/script/stat.js"></script>
-	</body>
+    <head>
+        <meta charset="utf-8">
+        <meta name="viewport" content="width=device-width,initial-scale=1.0,maximum-scale=1.0,user-scalable=0">
+        <meta name="description" content="个人摄影作品">
+        <meta name="keywords" content="摄影,照片,爱好">
+        <meta name="author" content="木木阳,mumuy" />
+        <title>摄影 - 路人甲</title>
+        <link rel="shortcut icon" href="favicon.ico"/>
+        <link rel="canonical" href="http://passser-by.com/photograph.html">
+        <link rel="stylesheet" href="./static/style/common.css">
+        <link rel="stylesheet" href="./static/style/photograph.css">
+    </head>
+    <body>
+        <div class="wrapper">
+            <header>
+                <div class="mod-head">
+                    <div class="inner">
+                        <div class="bd">
+                            <div class="logo">
+                                <a href="/"><img src="./static/image/public/logo.png" width="240" height="80" alt="过路人"/></a>
+                            </div>
+                            <nav>
+                                <li><a href="/project.html">项目</a></li>
+                                <li><a href="/writing.html">文字</a></li>
+                                <li class="active"><a href="/photograph.html">摄影</a></li>
+                                <li><a href="/comment.html">留言</a></li>
+                                <li><a href="/about.html">关于我</a></li>
+                            </nav>
+                            <div class="operation">
+                                <a class="btn" href="https://github.com/mumuy/" rel="nofollow" target="_blank" title="Github">
+                                    <svg aria-hidden="true" class="octicon" title="GitHub " version="1.1" viewBox="0 0 16 16" width="24" height="24"><path d="M8 0C3.58 0 0 3.58 0 8c0 3.54 2.29 6.53 5.47 7.59 0.4 0.07 0.55-0.17 0.55-0.38 0-0.19-0.01-0.82-0.01-1.49-2.01 0.37-2.53-0.49-2.69-0.94-0.09-0.23-0.48-0.94-0.82-1.13-0.28-0.15-0.68-0.52-0.01-0.53 0.63-0.01 1.08 0.58 1.23 0.82 0.72 1.21 1.87 0.87 2.33 0.66 0.07-0.52 0.28-0.87 0.51-1.07-1.78-0.2-3.64-0.89-3.64-3.95 0-0.87 0.31-1.59 0.82-2.15-0.08-0.2-0.36-1.02 0.08-2.12 0 0 0.67-0.21 2.2 0.82 0.64-0.18 1.32-0.27 2-0.27 0.68 0 1.36 0.09 2 0.27 1.53-1.04 2.2-0.82 2.2-0.82 0.44 1.1 0.16 1.92 0.08 2.12 0.51 0.56 0.82 1.27 0.82 2.15 0 3.07-1.87 3.75-3.65 3.95 0.29 0.25 0.54 0.73 0.54 1.48 0 1.07-0.01 1.93-0.01 2.2 0 0.21 0.15 0.46 0.55 0.38C13.71 14.53 16 11.53 16 8 16 3.58 12.42 0 8 0z"></path></svg>
+                                    <span>Github</span>
+                                </a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="mod-bg">
+                    <svg class="waves" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" viewBox="0 24 150 28" preserveAspectRatio="none" shape-rendering="auto">
+                        <defs>
+                            <path id="gentle-wave" d="M-160 44c30 0 58-18 88-18s 58 18 88 18 58-18 88-18 58 18 88 18 v44h-352z"></path>
+                        </defs>
+                        <g class="parallax">
+                            <use xlink:href="#gentle-wave" x="48" y="0" fill="rgba(255,255,255,0.4)"></use>
+                            <use xlink:href="#gentle-wave" x="48" y="3" fill="rgba(255,255,255,0.6)"></use>
+                            <use xlink:href="#gentle-wave" x="48" y="5" fill="rgba(255,255,255,0.2)"></use>
+                            <use xlink:href="#gentle-wave" x="48" y="7" fill="rgba(255,255,255,1)"></use>
+                        </g>
+                    </svg>
+                </div>
+            </header>
+            <div class="container">
+                <div class="inner">
+                    <div class="mod-photo">
+                        <div class="hd">
+                            <h3 class="title">我的摄影</h3>
+                            <p class="subtitle">My Photograph</p>
+                        </div>
+                        <div class="bd">
+                            <div class="list">
+                                <div class="item">
+                                    <div class="picture">
+                                        <img src="./static/image/photograph/20150828.jpg" loading="lazy" width="540">
+                                    </div>
+                                    <div class="summary">
+                                        <p>
+                                            <span class="time">2015年8月28日</span>
+                                            <span class="location">台北</span>
+                                        </p>
+                                    </div>
+                                </div>
+                                <div class="item">
+                                    <div class="picture">
+                                        <img src="./static/image/photograph/20250802.jpg" loading="lazy" width="540">
+                                    </div>
+                                    <div class="summary">
+                                        <p>
+                                            <span class="time">2025年8月2日</span>
+                                            <span class="location">槟城</span>
+                                        </p>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <footer>
+                <div class="mod-fixedbar">
+                    <div class="bd">
+                        <ul>
+                            <li>
+                                <a class="gotop" href="javascript:;" rel="nofollow">
+                                    <img src="./static/image/public/icon-gotop.png" width="24" height="24" alt="回到顶部">
+                                </a>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+                <div class="mod-foot">
+                    <div class="bd">
+                        <p>
+                            <span>Copyright &copy; 2025</span>
+                            <a href="/">路人甲</a>
+                            <span>版权所有</span>
+                        </p>
+                    </div>
+                </div>
+            </footer>
+        </div>
+        <script type="text/javascript" src="./static/script/common.js"></script>
+        <script type="text/javascript" src="./static/script/stat.js"></script>
+    </body>
 </html>
