--- a/index.html
+++ b/index.html
@@ -201,8 +201,8 @@
                                     </div>
                                     <div class="c-bd">
                                         <div class="cover">
-                                            <a class="btn" href="/calander/" target="_blank">查看项目</a>
-                                            <img src="./static/image/index/project/calander.png" loading="lazy" width="320" height="160">
+                                            <a class="btn" href="/calendar/" target="_blank">查看项目</a>
+                                            <img src="./static/image/index/project/calendar.png" loading="lazy" width="320" height="160">
                                         </div>
                                     </div>
                                 </div>
