--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                     <div class="inner">
                         <div class="bd">
                             <div class="logo">
-                                <a href="/"><img src="./static/image/public/logo.png" width="240" height="80" alt="过路人"/></a>
+                                <a href="/"><img src="./static/image/public/logo.png" width="180" height="64" alt="路人甲"/></a>
                             </div>
                             <nav>
                                 <li><a href="/project.html">项目</a></li>
@@ -73,7 +73,8 @@
                                 <span class="location">福建·厦门</span>
                             </div>
                             <div class="summary">
-                                <h3><span class="hi">嗨!</span>我是一名<span class="job">Web前端开发工程师</span></h3>
+                                <h4><span class="hi">嗨!</span>我是路人甲</h4>
+                                <h3>一名<span class="job">Web前端开发工程师</span></h3>
                                 <p>平日喜欢鼓捣各种有意思的东西<br/>热衷于开源项目开发与分享自己的想法</p>
                                 <div class="operation">
                                     <a class="btn" href="/about.html" target="_blank">联系我</a>
