--- a/writing.html
+++ b/writing.html
@@ -19,7 +19,7 @@
                     <div class="inner">
                         <div class="bd">
                             <div class="logo">
-                                <a href="/"><img src="./static/image/public/logo.png" width="240" height="80" alt="过路人"/></a>
+                                <a href="/"><img src="./static/image/public/logo.png" width="180" height="64" alt="路人甲"/></a>
                             </div>
                             <nav>
                                 <li><a href="/project.html">项目</a></li>
