--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
                                 </div>
                                 <div class="detail">
                                     <p>从事Web前端开发10余年，专注于算法实现及网页组件开发。追求优雅及高效的解决方案，热衷于分享自己的开源作品，期待能从开源社区中汲取能量。</p>
-                                    <p>兴趣爱好比较丰富，喜欢探索有趣的东西！毕竟生活远比代码的世界更精彩~</p>
+                                    <p>兴趣爱好比较丰富，喜欢探索有趣的东西！毕竟注释外的生活更为精彩~</p>
                                 </div>
                                 <div class="group">
                                     <div class="item">
