--- a/photograph.html
+++ b/photograph.html
@@ -26,7 +26,7 @@
                                 <li><a href="/writing.html">文字</a></li>
                                 <li class="active"><a href="/photograph.html">摄影</a></li>
                                 <li><a href="/comment.html">留言</a></li>
-                                <li><a href="/about.html">关于我</a></li>
+                                <li><a href="/about.html">关于</a></li>
                             </nav>
                             <div class="operation">
                                 <a class="btn" href="https://github.com/mumuy/" rel="nofollow" target="_blank" title="Github">
