--- a/about.html
+++ b/about.html
@@ -26,7 +26,7 @@
                                 <li><a href="/writing.html">文字</a></li>
                                 <li><a href="/photograph.html">摄影</a></li>
                                 <li><a href="/comment.html">留言</a></li>
-                                <li class="active"><a href="/about.html">关于我</a></li>
+                                <li class="active"><a href="/about.html">关于</a></li>
                             </nav>
                             <div class="operation">
                                 <a class="btn" href="https://github.com/mumuy/" rel="nofollow" target="_blank" title="Github">
@@ -56,18 +56,19 @@
                     <div class="mod-word">
                         <div class="bd">
                             <blockquote>
-                                <p>I sit at my window this morning where the world like a passer-by stops for a moment, nods to me and goes.</p>
-                                <p>我今晨坐在窗前，世界如一个路人似的，停留了一会，向我点点头又走过去了。</p>
-                                <p class="from">--泰戈尔《飞鸟集》</p>
+                                <p>在互联网的浩瀚代码流里，我们大多是穿行其间的行者 —— 敲过的每一行代码是脚下的路，调试过的每一个 Bug 是途中的景，而那些未被命名的需求与待实现的功能，则是前方隐约的光。我的网名与域名都叫 “passer-by”，初看是 “路人” 的简单释义，细想却藏着我作为程序员对这个行业、对自我的一点小注解。</p>
+                                <p>“passer-by” 的字面意思是 “经过的人、路人”，它自带一种轻缓的动态感：不是驻足不前的观望者，也不是急于定义终点的赶路者，而是带着观察与记录的心态，走过一段又一段技术旅程的人。就像我写代码时的状态 —— 不执着于 “一定要做出惊天动地的产品”，而是更享受从 0 到 1 搭建功能的过程：从梳理需求时在笔记本上画满的流程图，到敲下第一行 “print ('Hello World')” 的试探，再到反复调试后看到页面成功加载的瞬间，每一步都是 “passer-by” 在技术路上留下的细碎脚印。</p>
+                                <p class="from">出处：国内著名AI工具 - 豆包</p>
                             </blockquote>
                         </div>
                     </div>
                     <section class="mod-panel">
                         <div class="hd">
-                            <h3 class="title">关于我</h3>
+                            <h3 class="title">关于我&本站</h3>
                         </div>
                         <div class="bd">
-                            <p>标准的90后，喜欢特立独行，向往简约而不简单的生活。大学期间开始利用课余时间“间歇性”学习前端开发，自此走上程序猿的不归路……这就是我，一个路人甲~</p>
+                            <p>标准的90后，喜欢特立独行，向往简约而不简单的生活。大学期间开始利用课余时间“间歇性”学习前端开发，自此走上程序猿的不归路……毕业工作后常碰到轮播等插件需求，想起之前接触过淘宝装修的组件，便自己照猫画虎写了起来。发现还可以用，就开始分享到Github上，不知不觉积累了关注，也慢慢走进了开源的世界。</p>
+                            <p>本站的建立本是为了各开源项目的演示，自己也不善写作，于是也就修修补补起来了。古法手工码代码，没有设计师，自己愁着哪里不好看改改，也就成为了它~</p>
                         </div>
                     </section>
                     <section class="mod-panel">
@@ -89,8 +90,11 @@
                                     <a href="https://github.com/mumuy/" target="_blank" title="Github">
                                         <svg aria-hidden="true" class="octicon" height="24" title="GitHub " version="1.1" viewBox="0 0 16 16" width="24"><path d="M8 0C3.58 0 0 3.58 0 8c0 3.54 2.29 6.53 5.47 7.59 0.4 0.07 0.55-0.17 0.55-0.38 0-0.19-0.01-0.82-0.01-1.49-2.01 0.37-2.53-0.49-2.69-0.94-0.09-0.23-0.48-0.94-0.82-1.13-0.28-0.15-0.68-0.52-0.01-0.53 0.63-0.01 1.08 0.58 1.23 0.82 0.72 1.21 1.87 0.87 2.33 0.66 0.07-0.52 0.28-0.87 0.51-1.07-1.78-0.2-3.64-0.89-3.64-3.95 0-0.87 0.31-1.59 0.82-2.15-0.08-0.2-0.36-1.02 0.08-2.12 0 0 0.67-0.21 2.2 0.82 0.64-0.18 1.32-0.27 2-0.27 0.68 0 1.36 0.09 2 0.27 1.53-1.04 2.2-0.82 2.2-0.82 0.44 1.1 0.16 1.92 0.08 2.12 0.51 0.56 0.82 1.27 0.82 2.15 0 3.07-1.87 3.75-3.65 3.95 0.29 0.25 0.54 0.73 0.54 1.48 0 1.07-0.01 1.93-0.01 2.2 0 0.21 0.15 0.46 0.55 0.38C13.71 14.53 16 11.53 16 8 16 3.58 12.42 0 8 0z"></path></svg>
                                     </a>
-                                    <a href="https://weibo.com/loveto2012/" target="_blank" title="weibo">
-                                        <svg aria-hidden="true" class="octicon" width="37" height="24" viewBox="0 0 37 30"><path d="M36.539,12.806 C36.539,12.808 36.539,12.810 36.539,12.812 C36.297,13.556 35.498,13.964 34.754,13.723 C34.008,13.482 33.600,12.683 33.841,11.937 L33.840,11.937 C34.580,9.646 34.111,7.033 32.384,5.117 C30.656,3.201 28.108,2.470 25.753,2.970 C24.987,3.133 24.234,2.644 24.071,1.878 C23.907,1.114 24.395,0.360 25.161,0.195 L25.162,0.195 C28.472,-0.509 32.058,0.519 34.489,3.217 C36.921,5.911 37.577,9.584 36.539,12.806 ZM26.721,7.506 L26.721,7.505 C26.064,7.648 25.415,7.226 25.274,6.568 C25.133,5.908 25.553,5.259 26.212,5.119 C27.825,4.775 29.572,5.274 30.756,6.588 C31.941,7.901 32.259,9.690 31.752,11.260 C31.545,11.902 30.857,12.252 30.216,12.047 C29.574,11.839 29.224,11.150 29.431,10.509 L29.429,10.509 C29.678,9.741 29.522,8.866 28.943,8.224 C28.365,7.583 27.510,7.340 26.721,7.506 ZM27.210,9.790 C27.851,10.706 27.789,11.990 27.198,13.478 C26.925,14.163 27.283,14.269 27.804,14.426 C29.927,15.084 32.291,16.678 32.291,19.485 C32.291,24.132 25.594,29.985 15.526,29.985 C7.847,29.985 -0.003,26.261 -0.003,20.135 C-0.003,16.933 2.025,13.230 5.516,9.736 C10.179,5.072 15.616,2.947 17.661,4.994 C18.563,5.896 18.650,7.458 18.070,9.323 C17.768,10.262 18.951,9.742 18.951,9.744 C22.720,8.165 26.008,8.072 27.210,9.790 ZM25.923,19.401 C25.526,15.377 20.236,12.605 14.107,13.211 C7.980,13.818 3.333,17.572 3.731,21.597 C4.129,25.623 9.419,28.394 15.547,27.789 C21.676,27.183 26.320,23.428 25.923,19.401 ZM11.584,26.060 C8.638,25.108 7.391,22.198 8.681,19.576 C9.948,17.005 13.243,15.551 16.159,16.310 C19.177,17.090 20.717,19.939 19.484,22.705 C18.233,25.536 14.636,27.045 11.584,26.060 ZM13.248,20.549 C12.299,20.151 11.073,20.560 10.487,21.479 C9.894,22.402 10.173,23.501 11.115,23.930 C12.071,24.367 13.340,23.952 13.933,23.006 C14.515,22.050 14.208,20.958 13.248,20.549 ZM15.587,19.579 C15.223,19.434 14.768,19.609 14.554,19.968 C14.347,20.328 14.461,20.738 14.826,20.888 C15.197,21.041 15.671,20.865 15.885,20.498 C16.090,20.129 15.957,19.714 15.587,19.579 Z"/></svg>
+                                    <a href="https://juejin.cn/user/289926798118589" target="_blank" title="稀土掘金">
+                                        <svg class="octicon" height="24" viewBox="0 0 1212 1024" version="1.1" xmlns="http://www.w3.org/2000/svg" p-id="4610" width="48" height="48"><path d="M698.29709823 161.95344498L597.85455501 82.75836245l-104.9189194 82.75165526-5.4575013 4.38439708 110.3764207 87.99453639 110.74434276-87.99453639-10.30179954-7.94096981z m380.6453521 307.15305187l-481.36383602 379.5722479-481.05723562-379.35762774L45.45122758 526.41025479l552.12738673 435.34300046 552.43398714-435.58828146-71.07015112-57.05847694z m-481.36383602 30.78275641l-261.96003953-206.52654705-71.03949028 57.05847694 332.96887012 262.57324259 333.30613134-262.81852359-71.03949141-57.05847694-262.23598024 206.77182805z" p-id="4611"></path></svg>
+                                    </a>
+                                    <a href="https://weibo.com/loveto2012/" target="_blank" title="微博">
+                                        <svg aria-hidden="true" class="octicon" height="24" viewBox="0 0 37 30"><path d="M36.539,12.806 C36.539,12.808 36.539,12.810 36.539,12.812 C36.297,13.556 35.498,13.964 34.754,13.723 C34.008,13.482 33.600,12.683 33.841,11.937 L33.840,11.937 C34.580,9.646 34.111,7.033 32.384,5.117 C30.656,3.201 28.108,2.470 25.753,2.970 C24.987,3.133 24.234,2.644 24.071,1.878 C23.907,1.114 24.395,0.360 25.161,0.195 L25.162,0.195 C28.472,-0.509 32.058,0.519 34.489,3.217 C36.921,5.911 37.577,9.584 36.539,12.806 ZM26.721,7.506 L26.721,7.505 C26.064,7.648 25.415,7.226 25.274,6.568 C25.133,5.908 25.553,5.259 26.212,5.119 C27.825,4.775 29.572,5.274 30.756,6.588 C31.941,7.901 32.259,9.690 31.752,11.260 C31.545,11.902 30.857,12.252 30.216,12.047 C29.574,11.839 29.224,11.150 29.431,10.509 L29.429,10.509 C29.678,9.741 29.522,8.866 28.943,8.224 C28.365,7.583 27.510,7.340 26.721,7.506 ZM27.210,9.790 C27.851,10.706 27.789,11.990 27.198,13.478 C26.925,14.163 27.283,14.269 27.804,14.426 C29.927,15.084 32.291,16.678 32.291,19.485 C32.291,24.132 25.594,29.985 15.526,29.985 C7.847,29.985 -0.003,26.261 -0.003,20.135 C-0.003,16.933 2.025,13.230 5.516,9.736 C10.179,5.072 15.616,2.947 17.661,4.994 C18.563,5.896 18.650,7.458 18.070,9.323 C17.768,10.262 18.951,9.742 18.951,9.744 C22.720,8.165 26.008,8.072 27.210,9.790 ZM25.923,19.401 C25.526,15.377 20.236,12.605 14.107,13.211 C7.980,13.818 3.333,17.572 3.731,21.597 C4.129,25.623 9.419,28.394 15.547,27.789 C21.676,27.183 26.320,23.428 25.923,19.401 ZM11.584,26.060 C8.638,25.108 7.391,22.198 8.681,19.576 C9.948,17.005 13.243,15.551 16.159,16.310 C19.177,17.090 20.717,19.939 19.484,22.705 C18.233,25.536 14.636,27.045 11.584,26.060 ZM13.248,20.549 C12.299,20.151 11.073,20.560 10.487,21.479 C9.894,22.402 10.173,23.501 11.115,23.930 C12.071,24.367 13.340,23.952 13.933,23.006 C14.515,22.050 14.208,20.958 13.248,20.549 ZM15.587,19.579 C15.223,19.434 14.768,19.609 14.554,19.968 C14.347,20.328 14.461,20.738 14.826,20.888 C15.197,21.041 15.671,20.865 15.885,20.498 C16.090,20.129 15.957,19.714 15.587,19.579 Z"/></svg>
                                     </a>
                                 </div>
                             </div>
