--- a/writing.html
+++ b/writing.html
@@ -93,7 +93,7 @@
                                 <a class="qrcode" href="javascript:;" href="javascript:;">
                                     <img src="https://www.passer-by.com/static/image/public/icon-scan.png" width="24" height="24"/>
                                     <span class="popup">
-                                        <img src="https://www.passer-by.com/static/image/public/qrcode.jpg" width="150" alt="亲戚关系微信小程序"/>
+                                        <img src="https://www.passer-by.com/static/image/public/qrcode.bmp" width="150" alt="亲戚关系微信小程序"/>
                                     </span>
                                 </a>
                             </li>
